# llm-analysis-tds-project

./: Dockerfile  LICENSE  README.md  agent.py  pyproject.toml  requirements.txt
