[project]
name = "tdsproject2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Web / API
    "fastapi>=0.121.3",
    "uvicorn[standard]>=0.38.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "playwright>=1.56.0",

    # LangChain ecosystem
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=1.0.3",
    "google-genai>=0.17.0",
    "jsonpatch>=1.33",

    # Data / ML
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "duckdb>=1.4.2",
    "haversine>=2.9.0",
    
    # PDF / Docs
    "pypdf2>=3.0.1",
    "pypdf>=6.4.0",

    # OCR / Vision
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",

    # Audio / Speech
    "SpeechRecognition>=3.14.4",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",

    # Environment
    "python-dotenv>=1.2.1",
]
