[project]
name = "llm-analysis-tds-project"
version = "0.1.0"
description = "LLM Analysis Agent for TDS Project"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "streamlit",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "google-generativeai>=0.3.0",
    "playwright>=1.40.0",
    "requests",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "beautifulsoup4",
    "pytesseract",
    "Pillow>=10.0.0,<12",
    "SpeechRecognition",
    "pydub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
